fix: buttons visibility

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -2,3 +2,19 @@
     margin-left: 30px;
     margin-right: 30px;
 }
+
+.buttons {
+    width: 50px;
+    margin: 0 auto;
+    display: inline;
+}
+    
+.action_buttons {
+    width: 50px;
+    margin: 0 auto;
+    display: inline;
+}
+
+.add_question {
+    margin-top: 50px;
+}
